2006-02-11  Ales Hakl  <ales at hakl dot net>

	* src/strings.c (dfsch_string_utf8_length): Length calculation
	function for utf-8 strings 
	(dfsch_string_utf8_length): Fixed bad constant

2006-02-09  Ales Hakl  <ales at hakl dot net>

	* dfsch/dfsch.h: removed DFSCH_THROW

2006-02-08  Ales Hakl  <ales at hakl dot net>

	* dfsch/strings.h (dfsch_string_substring): Added declarations of
	added functions to header file

	* src/strings.c (dfsch_string_length): Return length of list
	(dfsch__string_native_register): Full set of string comparison
	predicates
	(native_substring): substring function

2006-02-07  Ales Hakl  <ales at hakl dot net>

	* dfsch/dfsch.h (DFSCH_GENERIC_ARG): generic argument handling macros 

	* src/strings.c (dfsch_string_list_append): Generic string append
	function.

2006-01-29  Ales Hakl  <ales at hakl dot net>

	* src/repl.c (main): indented option help a bit

	* dfsch/dfsch.h: Added readable parameter (discrimining between
	write and display)

	* src/repl.c (esc): Added last argument to functions defined in
	repl.c 

2006-01-28  Ales Hakl  <ales at hakl dot net>

	* src/repl.c (sigint_handler_break): Handle C-C while evaluating
	as user break.
	(sigint_handler_rl): C-c in readline works in more sane way

2006-01-27  Ales Hakl  <ales at hakl dot net>

	* src/repl.c (noninteractive_repl): Handle input from something
	that is not a terminal gracefuly

	* src/dfsch.c (lambda_extend): Fixed misbehaving lambda_extend for
	functions with variable number of srguments called without any
	arguments 
	(dfsch_raise): Thread safe exception handling
	(dfsch_make_symbol): Thread safe symbols
	(dfsch_eval_tr): Marginal performance hack

	* src/native.c (native_form_defined_p): Fixed defined? to work
	with new wxception system

	* src/hash.c (GET_HASH): Recognize nils as not being valid hash
	table objects

	* src/dfsch.c (dfsch_unintern): uninterning of symbols

	* src/native.c: Removed duplicated code
