@@ -252,7 +252,7 @@ int dfsch_string_ci_gte_p(dfsch_object_t* a, dfsch_object_t* b){
 dfsch_object_t* dfsch_string_list_append(dfsch_object_t* list){
   object_t* i = list;
   size_t len = 0;
-  dfsch_string_t *r = dfsch_make_object(STRING);
+  dfsch_string_t *r = (dfsch_string_t*)dfsch_make_object(STRING);
   char* ptr;
 
   while (i){
@@ -281,7 +281,7 @@ dfsch_object_t* dfsch_string_list_append(dfsch_object_t* list){
   
   *ptr = 0;
 
-  return r;
+  return (dfsch_object_t*)r;
 
 }
 
@@ -357,6 +357,58 @@ size_t dfsch_string_utf8_length(dfsch_object_t* string){
   return len;
 }
 
+uint32_t dfsch_string_utf8_ref(dfsch_object_t* string, size_t index){
+  dfsch_string_t* s = (dfsch_string_t*) string;
+  size_t i = 0;
+  size_t len = 0;
+  size_t state = 0;
+  uint32_t ch;
+  TYPE_CHECK(s, STRING, "string");
+
+  while(i<s->len){
+    if((s->ptr[i] & 0x80) == 0){ // U+0000 - U+007F, one byte
+      if (len == index){
+        return s->ptr[i];
+      }
+      i++;
+      len++;
+      state = 0;
+    }else{
+      if ((s->ptr[i] & 0xe0) == 0xc0){ // U+0080 - U+07FF, two bytes
+        ch = s->ptr[i] & 0x1f;
+        i++;
+        state = 1;
+      }else if ((s->ptr[i] & 0xf0) == 0xe0){ // U+0800 - U+FFFF, three bytes
+        ch = s->ptr[i] & 0xf;
+        i++;
+        state = 2;
+      }else if ((s->ptr[i] & 0xf7) == 0xf0){ // U+10000 - U+10FFFF, four bytes
+        ch = s->ptr[i] & 0x7;
+        i++;
+        state = 3;
+      }else if ((s->ptr[i] & 0xc0) == 0x80){ // internal byte
+        if (state != 0){
+          state--;
+          ch = (ch << 6) | s->ptr[i] & 0x3f;
+          if (state == 0){ 
+            if (len == index){
+              return ch;
+            }
+            len++;
+          }
+        }
+        i++;
+      }else{
+        i++;
+      }
+    }
+  }
+
+  dfsch_throw("exception:index-out-of-bounds",
+              dfsch_make_number_from_long(index));
+}
+
+
 /////////////////////////////////////////////////////////////////////////////
 //
 // Scheme binding
@@ -385,6 +437,17 @@ static object_t* native_string_length(void *baton, object_t* args, dfsch_tail_es
   DFSCH_OBJECT_ARG(args, string);
 
   return dfsch_make_number_from_long(dfsch_string_length(string));
+}
+
+static object_t* native_string_utf8_ref(void *baton, object_t* args, dfsch_tail_escape_t* esc){
+  size_t index;
+  object_t* string;
+
+  DFSCH_OBJECT_ARG(args, string);
+  DFSCH_LONG_ARG(args, index);
+
+  return dfsch_make_number_from_long(dfsch_string_utf8_ref(string, index));
+
 }
 static object_t* native_string_utf8_length(void *baton, object_t* args, dfsch_tail_escape_t* esc){
   object_t* string;
@@ -424,6 +487,8 @@ void dfsch__string_native_register(dfsch_ctx_t *ctx){
 		   dfsch_make_primitive(&native_substring,NULL));
   dfsch_ctx_define(ctx, "string-ref", 
 		   dfsch_make_primitive(&native_string_ref,NULL));
+  dfsch_ctx_define(ctx, "string-utf8-ref", 
+		   dfsch_make_primitive(&native_string_utf8_ref,NULL));
   dfsch_ctx_define(ctx, "string-length", 
 		   dfsch_make_primitive(&native_string_length,NULL));
   dfsch_ctx_define(ctx, "string-utf8-length", 
